@@ -1,0 +1,2 @@
+USER=root
+PROGRAM=/usr/bin/amanrmt
