@@ -1,0 +1,4 @@
+#%PAM-1.0
+auth	include	config-util
+account	include	config-util
+session	include	config-util
