@@ -330,3 +330,5 @@ H	* Fixed a typo in 'conf/aman.conf-sample'.
 	* Got DB replication working in amanrmt(1).
 2022-03-07 Fred Gleason <fredg@paravelsystems.com>
 	* Got audio replication working in amanrmt(1).
+2022-03-07 Fred Gleason <fredg@paravelsystems.com>
+	* Added an 'aman-remote' RPM subpackage.
